# binary-io

./: .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: coverage.yml
examples/: meson.build
examples/zip_example/: main.cpp
generator/: README.md  pyproject.toml
generator/bio_generator/: __init__.py  __main__.py  codegen.py  parser.py  schema.py  types.py
generator/protocols/: command_protocol.yaml  sensor_telemetry.yaml
generator/tests/: test_generator.py
include/: meson.build
include/binary-io/: binary-io.hpp
subprojects/: doctest.wrap
tests/: meson.build  tests.cpp
